Update index.html with latest Bitcoin report

--- a/index.html
+++ b/index.html
@@ -7511,46 +7511,15 @@ a.anchor-link {
 <!-- End of mermaid configuration --></head>
 <body class="jp-Notebook" data-jp-theme-light="true" data-jp-theme-name="JupyterLab Light">
 <main><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs jp-mod-noInput" id="cell-id=b39d313b-7147-4736-ba1c-c9a14539f831">
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noInput" id="cell-id=e3fe9948-22ec-44bd-bb6c-ddf07da3db67">
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs jp-mod-noInput" id="cell-id=e3fe9948-22ec-44bd-bb6c-ddf07da3db67">
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noInput" id="cell-id=6e410915-5cb2-4689-8a33-a59003e9e907">
 <div class="jp-Cell-outputWrapper">
 <div class="jp-Collapser jp-OutputCollapser jp-Cell-outputCollapser">
 </div>
 <div class="jp-OutputArea jp-Cell-outputArea">
 <div class="jp-OutputArea-child">
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain" tabindex="0">
-<pre>        time   open   high    low  close    Volume  year  cycle_year  \
-0 2011-08-18  10.90  10.90  10.90  10.90  0.489908  2011           3   
-1 2011-08-19  11.85  11.85  11.15  11.69  1.926578  2011           3   
-2 2011-08-20  11.70  11.70  11.70  11.70  0.085470  2011           3   
-3 2011-08-21  11.70  11.70  11.70  11.70  0.085470  2011           3   
-4 2011-08-22  11.70  11.70  11.70  11.70  0.028632  2011           3   
-
-  half_month year_month_half  month  day month_name  return_percent  
-0  2H_August       2011_8_2H      8   18     August        0.000000  
-1  2H_August       2011_8_2H      8   19     August       -1.350211  
-2  2H_August       2011_8_2H      8   20     August        0.000000  
-3  2H_August       2011_8_2H      8   21     August        0.000000  
-4  2H_August       2011_8_2H      8   22     August        0.000000  
-           time     open      high      low     close       Volume  year  \
-4975 2025-05-04  95850.0   96295.0  94162.0   94316.0   562.773176  2025   
-4976 2025-05-05  94301.0   95198.0  93550.0   94725.0   933.925785  2025   
-4977 2025-05-06  94725.0   96895.0  93376.0   96814.0  1074.635037  2025   
-4978 2025-05-07  96815.0   97717.0  95823.0   97054.0  1333.272379  2025   
-4979 2025-05-08  97059.0  101711.0  96907.0  101313.0  1668.381966  2025   
-
-      cycle_year half_month year_month_half  month  day month_name  \
-4975           1     1H_May       2025_5_1H      5    4        May   
-4976           1     1H_May       2025_5_1H      5    5        May   
-4977           1     1H_May       2025_5_1H      5    6        May   
-4978           1     1H_May       2025_5_1H      5    7        May   
-4979           1     1H_May       2025_5_1H      5    8        May   
-
-      return_percent  
-4975       -1.600417  
-4976        0.449624  
-4977        2.205331  
-4978        0.246863  
-4979        4.382901  
+<pre>Random words: quantum, echo, banana, ember, horizon
 </pre>
 </div>
 </div>
