--- a/index.html
+++ b/index.html
@@ -7511,7 +7511,164 @@ a.anchor-link {
 <!-- End of mermaid configuration --></head>
 <body class="jp-Notebook" data-jp-theme-light="true" data-jp-theme-name="JupyterLab Light">
 <main><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs jp-mod-noInput" id="cell-id=b39d313b-7147-4736-ba1c-c9a14539f831">
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs jp-mod-noInput" id="cell-id=62bee239-065b-44aa-9fde-efa79ac1a064">
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs jp-mod-noInput" id="cell-id=2242d503-0124-4ac0-aae2-cd61b5c1290b">
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noInput" id="cell-id=62bee239-065b-44aa-9fde-efa79ac1a064">
+<div class="jp-Cell-outputWrapper">
+<div class="jp-Collapser jp-OutputCollapser jp-Cell-outputCollapser">
+</div>
+<div class="jp-OutputArea jp-Cell-outputArea">
+<div class="jp-OutputArea-child jp-OutputArea-executeResult">
+<div class="jp-RenderedHTMLCommon jp-RenderedHTML jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/html" tabindex="0">
+<div>
+<style scoped="">
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
+<thead>
+<tr style="text-align: right;">
+<th></th>
+<th>half_month</th>
+<th>return_percent</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<th>0</th>
+<td>2H_November</td>
+<td>17.905316</td>
+</tr>
+<tr>
+<th>1</th>
+<td>2H_July</td>
+<td>10.436121</td>
+</tr>
+<tr>
+<th>2</th>
+<td>2H_April</td>
+<td>9.747998</td>
+</tr>
+<tr>
+<th>3</th>
+<td>1H_November</td>
+<td>9.253198</td>
+</tr>
+<tr>
+<th>4</th>
+<td>2H_October</td>
+<td>8.557055</td>
+</tr>
+<tr>
+<th>5</th>
+<td>1H_February</td>
+<td>8.069189</td>
+</tr>
+<tr>
+<th>6</th>
+<td>2H_May</td>
+<td>6.640945</td>
+</tr>
+<tr>
+<th>7</th>
+<td>2H_March</td>
+<td>6.157628</td>
+</tr>
+<tr>
+<th>8</th>
+<td>1H_October</td>
+<td>6.086251</td>
+</tr>
+<tr>
+<th>9</th>
+<td>1H_January</td>
+<td>6.074730</td>
+</tr>
+<tr>
+<th>10</th>
+<td>1H_December</td>
+<td>4.314544</td>
+</tr>
+<tr>
+<th>11</th>
+<td>2H_December</td>
+<td>4.244989</td>
+</tr>
+<tr>
+<th>12</th>
+<td>1H_March</td>
+<td>3.989053</td>
+</tr>
+<tr>
+<th>13</th>
+<td>1H_August</td>
+<td>3.677216</td>
+</tr>
+<tr>
+<th>14</th>
+<td>1H_April</td>
+<td>2.753134</td>
+</tr>
+<tr>
+<th>15</th>
+<td>1H_May</td>
+<td>2.735995</td>
+</tr>
+<tr>
+<th>16</th>
+<td>2H_February</td>
+<td>2.651344</td>
+</tr>
+<tr>
+<th>17</th>
+<td>2H_June</td>
+<td>1.390780</td>
+</tr>
+<tr>
+<th>18</th>
+<td>2H_January</td>
+<td>1.161953</td>
+</tr>
+<tr>
+<th>19</th>
+<td>1H_July</td>
+<td>0.285664</td>
+</tr>
+<tr>
+<th>20</th>
+<td>1H_June</td>
+<td>-0.428467</td>
+</tr>
+<tr>
+<th>21</th>
+<td>2H_September</td>
+<td>-0.824870</td>
+</tr>
+<tr>
+<th>22</th>
+<td>2H_August</td>
+<td>-3.018229</td>
+</tr>
+<tr>
+<th>23</th>
+<td>1H_September</td>
+<td>-3.236493</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+</div>
+</div>
+</div>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noInput" id="cell-id=f1158921-1b69-4515-a90e-a627ad11b7e0">
 <div class="jp-Cell-outputWrapper">
 <div class="jp-Collapser jp-OutputCollapser jp-Cell-outputCollapser">
@@ -8260,13 +8417,6 @@ Color Key:
 <div class="jp-Collapser jp-OutputCollapser jp-Cell-outputCollapser">
 </div>
 <div class="jp-OutputArea jp-Cell-outputArea">
-<div class="jp-OutputArea-child">
-<div class="jp-RenderedText jp-OutputArea-output" data-mime-type="application/vnd.jupyter.stderr" tabindex="0">
-<pre>C:\Users\Chris\AppData\Local\Temp\ipykernel_20452\2185371120.py:366: UserWarning: This figure includes Axes that are not compatible with tight_layout, so results might be incorrect.
-  fig.tight_layout(rect=[0, 0.03, 1, 0.97])
-</pre>
-</div>
-</div>
 <div class="jp-OutputArea-child">
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain" tabindex="0">
 <pre>
